--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,6 +1,7 @@
 # comma separated  the sign of the card and the value and two dots separated other card 
-# A = 1
+# A = 11
 # J = 10
 # Q = 10
 # K = 10
-value.characters = A,1:2,2:3,3:4,4:5,5:6,6:7,7:8,8:9,9:10,10:J,10:Q,10:K,10
+value.characters = A,11:2,2:3,3:4,4:5,5:6,6:7,7:8,8:9,9:10,10:J,10:Q,10:K,10
+languages = es,español:in,ingles 
